examples/extension-server/project/apk-cr/apk-gateway.yaml
#Binding jwt authentication to the Gateway level - applying to all routes associated with the gateway
# ---
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: SecurityPolicy
# metadata:
#   name: jwt-auth-policy-gateway
#   namespace: envoy-gateway-system
# spec:
#   jwt:
#     providers:
#     - name: example
#       remoteJWKS:
#         uri: https://raw.githubusercontent.com/envoyproxy/gateway/main/examples/kubernetes/jwt/jwks.json
#   targetRef:
#     group: gateway.networking.k8s.io
#     kind: Gateway
#     name: eg
#     namespace: envoy-gateway-system

---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
