examples/extension-server/project/apk-cr/apk-http-route.yaml
#Enable SecurityPolicy at HTTPRoute level
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: jwt-auth-http-route
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: apk-http-route
  jwt:
    providers:
    - name: example
      remoteJWKS:
        uri: https://raw.githubusercontent.com/envoyproxy/gateway/main/examples/kubernetes/jwt/jwks.json
        
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apk-http-route
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - "www.example.com"
  rules:
    # Rule 1: Match /api/v3/ directly test the backend
    - matches:
        - path:
            type: PathPrefix
            value: /api/v3/
      backendRefs:
        - group: ""
          kind: Service
          name: apk-backend
          port: 8080
          weight: 1
    # Rule 2: Catch-all rule with dynamic prefix matching by extension-server
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: API
            name: my-api
      backendRefs:
        - group: ""
          kind: Service
          name: apk-backend
          port: 8080
          weight: 1
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: apk-http-route
#   namespace: envoy-gateway-system
# spec:
#   parentRefs:
#     - name: eg
#       namespace: envoy-gateway-system
#   hostnames:
#     - "www.example.com"
#   rules:
#     - backendRefs:
#         - group: ""
#           kind: Service
#           name: apk-backend 
#           port: 8080
#           weight: 1
#       matches:
#         - path:
#             type: PathPrefix
#             value: /api/v3/  # Accepts any resource starting with /
#       filters:
#         - type: ExtensionRef
#           extensionRef:
#             group: dp.wso2.com
#             kind: API
#             name: apk-api  # matches intended API CR
